--- a/development/index.html
+++ b/development/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />    
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+
+		<link rel="stylesheet" href="http://backbone-paginator.github.io/backbone-pageable/examples/css/backgrid.css" />
+		<link rel="stylesheet" href="http://backbone-paginator.github.io/backbone-pageable/examples/css/extensions/paginator/backgrid-paginator.css" />
+
 		<title>Hello!</title>
 		<script data-main="app/main" src="app/libs/require.js"></script>
 	</head>
