--- a/development/index.html
+++ b/development/index.html
@@ -10,9 +10,8 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 
-		<link rel="stylesheet" href="http://backbone-paginator.github.io/backbone-pageable/examples/css/backgrid.css" />
-		<link rel="stylesheet" href="http://backbone-paginator.github.io/backbone-pageable/examples/css/extensions/paginator/backgrid-paginator.css" />
-
+		<!-- <link rel="stylesheet" href="http://backbone-paginator.github.io/backbone-pageable/examples/css/backgrid.css" />
+		<link rel="stylesheet" href="http://backbone-paginator.github.io/backbone-pageable/examples/css/extensions/paginator/backgrid-paginator.css" /> -->
 		<title>Hello!</title>
 		<script data-main="app/main" src="app/libs/require.js"></script>
 	</head>
