--- a/development/index.html
+++ b/development/index.html
@@ -11,5 +11,9 @@
 		<script data-main="app/main" src="libs/requirejs/require.js"></script>
 	</head>
 	<body>
+		<div class="container"></div>
+		
+		<div class="alert alert-message-h hide"></div>
+		
 	</body>
 </html>
