--- a/development/index.html
+++ b/development/index.html
@@ -11,6 +11,6 @@
 		<script data-main="app/main" src="libs/requirejs/require.js"></script>
 	</head>
 	<body>
-		<div class="container"></div>
+		<div class="main-container"></div>
 	</body>
 </html>
