--- a/development/index.html
+++ b/development/index.html
@@ -10,7 +10,5 @@
 
 		<script data-main="app/main" src="libs/requirejs/require.js"></script>
 	</head>
-	<body>
-		<div class="main-container"></div>
-	</body>
+	<body></body>
 </html>
