--- a/development/index.html
+++ b/development/index.html
@@ -10,7 +10,9 @@
 
 		<script data-main="app/main" src="libs/requirejs/require.js"></script>
 	</head>
-	<body></body>
+	<body>
+		<script src="//localhost:35729/livereload.js"></script>
+	</body>
 </html>
 
 
