--- a/development/index.html
+++ b/development/index.html
@@ -10,9 +10,7 @@
 
 		<script data-main="app/main" src="libs/requirejs/require.js"></script>
 	</head>
-	<body>
-		<script src="//localhost:35729/livereload.js"></script>
-	</body>
+	<body></body>
 </html>
 
 
