--- a/development/index.html
+++ b/development/index.html
@@ -8,12 +8,10 @@
 		<meta name="author" content="">
 		<link rel="shortcut icon" href="favicon.ico">
 
-		<script data-main="app/main" src="libs/requirejs/require.js"></script>
+		<script data-main="app/config" src="libs/requirejs/require.js"></script>
 	</head>
 	<body>
+		
 		<script src="//localhost:35729/livereload.js"></script>
 	</body>
 </html>
-
-
-
