--- a/ng-acr/index.html
+++ b/ng-acr/index.html
@@ -11,23 +11,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="app/bower_components/html5-boilerplate/css/normalize.css">
 	<link rel="stylesheet" href="app/bower_components/html5-boilerplate/css/main.css">
+	<link rel="stylesheet" href="app/bower_components/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" href="app/bower_components/bootstrap/dist/css/bootstrap-theme.css">
 	<link rel="stylesheet" href="app/css/app.css"/>
 	<script src="app/bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-	<h1>AngularJS + RequireJS</h1>
-	<ul class="menu">
-		<li><a href="#/view1">view1</a></li>
-		<li><a href="#/view2">view2</a></li>
-	</ul>
+    <div class="container">
+        <h1>Amazing Credit Results</h1>
+        <ul class="menu">
+            <li><a href="#/view1">view1</a></li>
+            <li><a href="#/view2">view2</a></li>
+        </ul>
 
-	<!--[if lt IE 7]>
-			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-	<![endif]-->
+        <!--[if lt IE 7]>
+                <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
-	<div ng-view></div>
+        <div ng-view></div>
+    </div>
 
-	<div>AngularJS + RequireJS seed app: v<span app-version></span></div>
 	<script data-main="app/js/main" src="app/bower_components/requirejs/require.js"></script>		
 </body>
 </html>
