--- a/ng-acr/index.html
+++ b/ng-acr/index.html
@@ -19,10 +19,10 @@
 <body>
     <div class="container">
         <h1>Amazing Credit Results</h1>
-        <ul class="menu">
+        <!-- <ul class="menu">
             <li><a href="#/view1">view1</a></li>
             <li><a href="#/view2">view2</a></li>
-        </ul>
+        </ul> -->
 
         <!--[if lt IE 7]>
                 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
