--- a/ng-acr/index.html
+++ b/ng-acr/index.html
@@ -19,15 +19,21 @@
     <div class="container">
         <div class="row">
             <h1 class="col-md-6 col-xs-12"><a href="/#/sellers" class="brand">Amazing Credit Results</a></h1>
-            <div class="col-md-3 col-xs-12 pull-right" ng-if="userInfo">
-                <h5 ng-bind="userInfo.name.givenName"></h5>
-                <a href="/#/logout">Logout</a>
+        </div>
+        <div class="navbar navbar-default" ng-if="userInfo.id">
+            <div class="navbar-header">
+                <a class="navbar-brand" ng-bind="userInfo.name.givenName"></a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav" role="navigation">
+                    <li><a href="/#/sellers">Sellers</a></li>
+                    <li><a href="/#/buyers">Buyers</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/#/logout">Logout</a></li>
+                </ul>
             </div>
         </div>
-        <!-- <ul class="menu">
-            <li><a href="#/view1">view1</a></li>
-            <li><a href="#/view2">view2</a></li>
-        </ul> -->
 
         <!--[if lt IE 7]>
                 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
