cleaned and dryed up some html and js, added the skeleton for put requests, added owners page

--- a/ng-acr/index.html
+++ b/ng-acr/index.html
@@ -28,6 +28,7 @@
                 <ul class="nav navbar-nav" role="navigation">
                     <li><a href="/#/sellers">Sellers</a></li>
                     <li><a href="/#/buyers">Buyers</a></li>
+                    <li><a href="/#/owners">Owners</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/#/logout">Logout</a></li>
