--- a/ng-acr/index.html
+++ b/ng-acr/index.html
@@ -21,18 +21,23 @@
             <h1 class="col-md-6 col-xs-12"><a href="/#/sellers" class="brand">Amazing Credit Results</a></h1>
         </div>
         <div class="navbar navbar-default" ng-if="userInfo.id">
-            <div class="navbar-header">
-                <a class="navbar-brand" ng-bind="userInfo.name.givenName"></a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav" role="navigation">
-                    <li><a href="/#/sellers">Sellers</a></li>
-                    <li><a href="/#/buyers">Buyers</a></li>
-                    <li><a href="/#/owners">Owners</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/#/logout">Logout</a></li>
-                </ul>
+            <div class="container-fluid">
+                <div class="navbar-header" role="navigation">
+                    <a class="navbar-brand" ng-bind="userInfo.name.givenName"></a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="/#/sellers">Sellers</a></li>
+                        <li><a href="/#/buyers">Buyers</a></li>
+                        <li><a href="/#/owners">Owners</a></li>
+                        <li><a href="/#/products">Products</a></li>
+                        <li><a href="/#/orders">Orders</a></li>
+                        <li><a href="/#/tradelines">Tradelines</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/#/logout">Logout</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
 
