--- a/ng-acr/index.html
+++ b/ng-acr/index.html
@@ -24,8 +24,14 @@
             <div class="container-fluid">
                 <div class="navbar-header" role="navigation">
                     <a class="navbar-brand" ng-bind="userInfo.name.givenName"></a>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" kj-toggle-navbar-collapse="#header-nav">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                 </div>
-                <div class="collapse navbar-collapse">
+                <div class="collapse navbar-collapse" id="header-nav">
                     <ul class="nav navbar-nav">
                         <li><a href="/#/sellers">Sellers</a></li>
                         <li><a href="/#/buyers">Buyers</a></li>
