added a switch for the menu when on mobile, moved where the user information is gotten from, added an account page, added switched for the different type of users

--- a/ng-acr/index.html
+++ b/ng-acr/index.html
@@ -23,7 +23,7 @@
         <div class="navbar navbar-default" ng-if="userInfo.id">
             <div class="container-fluid">
                 <div class="navbar-header" role="navigation">
-                    <a class="navbar-brand" ng-bind="userInfo.name.givenName"></a>
+                    <a href="/#/account" class="navbar-brand" ng-bind="userInfo.name.givenName"></a>
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" kj-toggle-navbar-collapse="#header-nav">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
