removed some unnecessary pages for now, added product seller, nc, bc, and mo Ratings to tradelines, added a delete button

--- a/ng-acr/index.html
+++ b/ng-acr/index.html
@@ -37,7 +37,7 @@
                         <li><a href="/#/buyers">Buyers</a></li>
                         <li><a href="/#/owners">Owners</a></li>
                         <li><a href="/#/products">Products</a></li>
-                        <li><a href="/#/orders">Orders</a></li>
+                        <!-- <li><a href="/#/orders">Orders</a></li> -->
                         <li><a href="/#/tradelines">Tradelines</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
