added humane notification library, made buyers redirect to store page on login

--- a/ng-acr/index.html
+++ b/ng-acr/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="app/bower_components/html5-boilerplate/css/main.css">
 	<link rel="stylesheet" href="app/bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" href="app/bower_components/bootstrap/dist/css/bootstrap-theme.css">
+	<link rel="stylesheet" href="app/bower_components/humane-js/themes/flatty.css">
 	<link rel="stylesheet" href="app/css/app.css"/>
 </head>
 <body>
