--- a/ng-acr/index.html
+++ b/ng-acr/index.html
@@ -37,7 +37,7 @@
                         <li data-ng-if="userInfo.roles.owner"><a href="/#/sellers">Sellers</a></li>
                         <li data-ng-if="userInfo.roles.owner"><a href="/#/buyers">Buyers</a></li>
                         <li data-ng-if="userInfo.roles.owner"><a href="/#/owners">Owners</a></li>
-                        <li data-ng-if="userInfo.roles.seller"><a href="/#/products">Products</a></li>
+                        <li data-ng-if="!userInfo.roles.buyer"><a href="/#/products">Products</a></li>
                         <li data-ng-if="userInfo.roles.owner"><a href="/#/orders">Orders</a></li>
                         <li data-ng-if="!userInfo.roles.buyer"><a href="/#/tradelines">Tradelines</a></li>
                         <li data-ng-if="userInfo.roles.buyer"><a href="/#/store">Store</a></li>
