started checkout process, added ability to add ACH account, and verify it works

--- a/ng-acr/index.html
+++ b/ng-acr/index.html
@@ -44,6 +44,7 @@
                         <li data-ng-if="userInfo.roles.buyer"><a href="/#/cart">Cart</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/#/checkout">Checkout</a></li>
                         <li><a href="/#/logout">Logout</a></li>
                     </ul>
                 </div>
